Add login - register to firebase

--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
     <!-- Only required to import legacy syntax and directives. You won't need it 
     unless you are attempting to move an app from Mobile Angular UI 1.1 to 1.2 -->
     <script src="/dist/js/mobile-angular-ui.migrate.min.js"></script>
+    <script src='https://cdn.firebase.com/js/client/1.1.1/firebase.js'></script>
     <script src="/src/js/main.js"></script>
+
+    <script src="/src/js/services/firebase.js"></script>
+    
+    <script src="/src/js/controllers/user.js"></script>
+    <script src="/src/js/controllers/home.js"></script>
   </head>
 
   <body 
