--- a/sidebar.html
+++ b/sidebar.html
@@ -5,6 +5,9 @@
     	<a class="list-group-item" href="#/login">
     		Login <i class="fa fa-chevron-right pull-right"></i>
     	</a>
+      <a class="list-group-item" href="#/register">
+        Register <i class="fa fa-chevron-right pull-right"></i>
+      </a>
       <a class="list-group-item" href="#/">Home <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="#/scroll">Scroll <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="#/toggle">Toggle <i class="fa fa-chevron-right pull-right"></i></a>
