Add users table in firebase and home list, search

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     unless you are attempting to move an app from Mobile Angular UI 1.1 to 1.2 -->
     <script src="/dist/js/mobile-angular-ui.migrate.min.js"></script>
     <script src='https://cdn.firebase.com/js/client/1.1.1/firebase.js'></script>
+    <!-- AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/0.9.0/angularfire.min.js"></script>
+
     <script src="/src/js/main.js"></script>
 
     <script src="/src/js/services/firebase.js"></script>
@@ -52,7 +55,7 @@
 
       <div class="navbar navbar-app navbar-absolute-top">
         <div class="navbar-brand navbar-brand-center" ui-yield-to="title">
-          Mobile Angular UI
+          Chat Firebase
         </div>
         <div class="btn-group pull-left">
           <div ui-toggle="uiSidebarLeft" class="btn sidebar-toggle">
