--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/dist/css/mobile-angular-ui-base.css" />
     <link rel="stylesheet" href="/dist/css/mobile-angular-ui-desktop.css" />
     <link rel="stylesheet" href="demo.css" />
+    <link rel="stylesheet" href="/css/styles.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular-route.min.js"></script>
     <script src="/dist/js/mobile-angular-ui.min.js"></script>
@@ -33,11 +34,12 @@
     
     <script src="/src/js/controllers/user.js"></script>
     <script src="/src/js/controllers/home.js"></script>
+    <script src="/src/js/controllers/chat.js"></script>
   </head>
 
   <body 
     ng-app="MobileAngularUiExamples" 
-    
+    ng-controller="MainController"
     >
     <!-- ng-controller="MainController" -->
 
@@ -64,7 +66,7 @@
         </div>
         <div class="btn-group pull-right" ui-yield-to="navbarAction">
           <div ui-toggle="uiSidebarRight" class="btn">
-            <i class="fa fa-comment"></i> Chat
+            <i class="fa fa-comment"></i> open chat
           </div>
         </div>
       </div>
