Add logout route, and features in chat view

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular-route.min.js"></script>
     <script src="/dist/js/mobile-angular-ui.min.js"></script>
+    <script src="/dist/js/moment.js"></script>
+    <script src="/dist/js/angular-moment.js"></script>
 
     <!-- Only required to use $drag, $swipe and Translate services -->
     <script src="/dist/js/mobile-angular-ui.gestures.min.js"></script>
@@ -55,7 +57,7 @@
 
       <!-- Navbars -->
 
-      <div class="navbar navbar-app navbar-absolute-top">
+      <div class="navbar navbar-app navbar-absolute-top" >
         <div class="navbar-brand navbar-brand-center" ui-yield-to="title">
           Chat Firebase
         </div>
