--- a/sidebar.html
+++ b/sidebar.html
@@ -9,6 +9,7 @@
         Register <i class="fa fa-chevron-right pull-right"></i>
       </a>
       <a class="list-group-item" href="#/">Home <i class="fa fa-chevron-right pull-right"></i></a>
+      <a class="list-group-item" href="#/logout">Logout <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="#/scroll">Scroll <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="#/toggle">Toggle <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="#/tabs">Tabs <i class="fa fa-chevron-right pull-right"></i></a>
