--- a/sidebarRight.html
+++ b/sidebarRight.html
@@ -2,12 +2,15 @@
   <div class="scrollable-content">
       <div class="list-group" ui-toggle="uiSidebarRight">
 
-          <a class="list-group-item media" href="" ng-repeat="user in chatUsers">
+          <a class="list-group-item media" href="#/chat/{{notification.chatRoom}}" ng-repeat="notification in notifications">
               <div class="pull-left">
                   <i class="fa fa-user chat-user-avatar"></i>
               </div>
               <div class="media-body">
-                  <h5 class="media-heading">{{user.name}}</h5>
+                  <h5 class="media-heading">{{notification.from}}</h5>
+                  <p>{{ notification.message }}</p>
+
+                  <!--
                   <small ng-switch on="user.online">
                       <span ng-switch-when="true">
                           <span class="label label-success">ONLINE</span>
@@ -17,6 +20,7 @@
                           </span>
                       </span>
                   </small>
+                -->
               </div>
           </a>
 
